# mir2-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  claude.md  readme.md
.cargo/: config.toml
assets/ui/: base.css  login.css  login.html
docs/: 00.animation.md  01.login.md  Client for Asp.7z  res.md
src/: error.rs  lib.rs  main.rs
src/core/: config.rs  game_state.rs  mod.rs
src/formats/: mlibrary_v2.rs
src/game/: mod.rs
src/game/actor/: mod.rs
src/game/map/: mod.rs
src/network/: message.rs  mock_server.rs  mod.rs  protocol.rs
src/render/: mod.rs  sprite_animation.rs
src/resource/: bevy_image.rs  cache.rs  loader.rs  mod.rs
src/resource/formats/: mlibrary_v1.rs  mod.rs  wemade_library.rs  wtl_library.rs
src/resource/image/: mod.rs  palette.rs
src/scene/: game.rs  loading.rs  login.rs  login_success.rs  mod.rs  select_char.rs
src/ui/: effects.rs  mod.rs
