[package]
name = "mir2-rs"
version = "0.1.0"
edition = "2024"
description = "The Legend of Mir 2 Client - Rust Implementation with Bevy"
authors = ["Mir2-RS Team"]

# [lib]
# name = "mir2_rs"
# path = "src/lib.rs"

[[bin]]
name = "mir2-rs"
path = "src/main.rs"

[features]
default = []
# 动态链接 - 仅用于 release 构建加速编译
# 使用方式: cargo build --release --features dynamic_linking
# dynamic_linking = ["bevy/dynamic_linking"]
dev = ["bevy/file_watcher", "bevy/trace"]

[dependencies]
# Bevy 游戏引擎 (2D)
bevy = { version = "0.18", default-features = false, features = [
    "debug",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_state",
    "bevy_winit",
    "bevy_log",
    "bevy_color",
    "multi_threaded",
    "picking",
    "ui_picking",
    "default_font",
    "png",
    "jpeg",
    "x11",
    "wayland",
] }

# bevy_extended_ui - HTML/CSS UI 框架 (禁用默认fluent避免sqlite3依赖)
bevy_extended_ui = { path = "../bevy_extended_ui", default-features = false, features = [
    "css-breakpoints",
] }
bevy_extended_ui_macros = { path = "../bevy_extended_ui/crates/bevy_extended_ui_macros" }

# 图像处理
image = "0.25"
png = "0.18"

# 压缩库
flate2 = "1.0"

# 二进制读写
byteorder = "1.5"

# 错误处理
thiserror = "2.0"
anyhow = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 路径处理
directories = "6.0"

[build-dependencies]


# Release 优化配置
[profile.release]
lto = "thin"      # 链接时优化，减小二进制大小并提升性能
opt-level = 3     # 最高优化级别
codegen-units = 1 # 单个代码生成单元，更好的优化（编译更慢，运行更快）
strip = true      # 剥离符号信息，减小二进制大小
panic = "abort"   # panic 时直接中止，减少 panic 处理代码

# 针对 Bevy 依赖的优化（即使开发模式也优化依赖）
[profile.dev.package."*"]
opt-level = 3
